# ad_performance_aggregator_exam

./: PROMPTS.md  Readme.md  top10_cpa.csv  top10_ctr.csv
ad_performance_aggregator/: Cargo.toml
ad_performance_aggregator/src/: main.rs
