[package]
name = "ad_performance_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI argument parsing - similar to .NET's System.CommandLine
clap = { version = "4", features = ["derive"] }

# CSV parsing with streaming support - memory efficient!
csv = "1.3"

# Serialization/deserialization - similar to System.Text.Json
serde = { version = "1", features = ["derive"] }
